--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -72,6 +72,7 @@
                   name="first"
                   minlength="2"
                 /><br>
+                <span id="first_name_error" class="error_message"></span>
               </div>
               <div
                 class="formData">
@@ -82,6 +83,7 @@
                   id="last"
                   name="last"
                 /><br>
+                <span id="last_name_error" class="error_message"></span>
               </div>
               <div
                 class="formData">
@@ -92,6 +94,7 @@
                   id="email"
                   name="email"
                 /><br>
+                <span id="email_error" class="error_message"></span>
               </div>
               <div
                 class="formData">
@@ -102,11 +105,13 @@
                   id="birthdate"
                   name="birthdate"
                 /><br>
+                <span id="birthday_error" class="error_message"></span>
               </div>
               <div
                 class="formData">
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <div id="quantity_error" class="error_message"></div> 
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div
@@ -177,6 +182,7 @@
                   <span class="checkbox-icon"></span>
                   Portland</label
                 >
+                <div id="location_error" class="error_message"></div>
               </div>
 
               <div
@@ -192,6 +198,7 @@
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
+                <div id="terms_checkbox_error" class="error_message"></div>
                 <input class="checkbox-input" type="checkbox" id="checkbox2" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
